--- a/aMovieDatabase/requirements.txt
+++ b/aMovieDatabase/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.1.1
 Django==3.2.16
 docopt==0.6.2
 idna==3.4
+Pillow==9.3.0
 pipreqs==0.4.11
 python-decouple==3.6
 pytz==2022.7
